# diffusion2D

./: README.md  pyproject.toml
src/diffusion2d_pkg/: diffusion2d.py  output.py
